--- a/samples/index.html
+++ b/samples/index.html
@@ -8,11 +8,16 @@
 
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="../bower_components/angular-auto-grow-input/dist/angular-auto-grow-input.js"></script>
+    <script src="../bower_components/angular-select-options/dist/angular-select-options.js"></script>
+    <script src="../bower_components/angular-disable-all/dist/angular-disable-all.js"></script>
+
     <script src="../dist/angular-tags-input.js"></script>
-    <script src="../../auto-grow-input/dist/angular-auto-grow-input.js"></script>
-    <script src="../../select-options/dist/angular-select-options.js"></script>
-    <script src="../../disable-all/dist/angular-disable-all.js"></script>
     <script src="tagsInputSample.js"></script>
+
+    <style>
+        body { font-family: Tahoma, Geneva, sans-serif; font-size: 13px; }
+    </style>
 
 </head>
 <body ng-app="tagsInputSample" ng-controller="TagsInputSampleCtrl">
